--- a/.github/workflows/image.yml
+++ b/.github/workflows/image.yml
@@ -8,11 +8,8 @@ jobs:
     - uses: actions/checkout@v3
     - uses: cachix/install-nix-action@v20
       with:
-        nix_path: nixpkgs=channel:nixos-22.11
-    - uses: cachix/cachix-action@v12
-      with:
-        name: seedhammer
-        signingKey: '${{ secrets.CACHIX_SIGNING_KEY }}'
+        nix_path: nixpkgs=channel:nixos-23.05
+    - uses: DeterminateSystems/magic-nix-cache-action@v1
     - name: Set version to GITHUB_SHA
       if: ${{ github.ref_type != 'tag' }}
       run: echo "version=${{ github.sha }}" >> $GITHUB_ENV
