--- a/.github/workflows/image.yml
+++ b/.github/workflows/image.yml
@@ -5,20 +5,19 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v4
-    - uses: cachix/install-nix-action@v27
+    - uses: actions/checkout@v6
+    - uses: cachix/install-nix-action@v31
       with:
-        nix_path: nixpkgs=channel:nixos-24.05
-    - uses: DeterminateSystems/magic-nix-cache-action@v7
+        nix_path: nixpkgs=channel:nixos-25.11
+    - uses: DeterminateSystems/magic-nix-cache-action@v13
     - name: Set version to GITHUB_SHA
       if: ${{ github.ref_type != 'tag' }}
       run: echo "version=${{ github.sha }}" >> $GITHUB_ENV
     - name: Set version to GITHUB_REF_NAME
       if: ${{ github.ref_type == 'tag' }}
       run: echo "version=${{ github.ref_name }}" >> $GITHUB_ENV
-    - run: nix build -L
-    - run: nix run -L .#stamp-release ${{ env.version }}
-    - uses: actions/upload-artifact@v4
+    - run: VERSION="${{ env.version }}" nix run .#build-firmware
+    - uses: actions/upload-artifact@v6
       with:
-        name: seedhammer-${{ env.version }}.img
-        path: seedhammer-${{ env.version }}.img
+        name: seedhammerii-${{ env.version }}.uf2
+        path: seedhammerii-${{ env.version }}.uf2
